--- a/nodes-frontend/index.html
+++ b/nodes-frontend/index.html
@@ -11,7 +11,7 @@
   <link rel="preload" href="/fonts/IBMPlexMono-Regular.woff2" as="font" type="font/woff2" crossorigin />
   <link rel="preload" href="/fonts/IBMPlexMono-Medium.woff2" as="font" type="font/woff2" crossorigin />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nodes — Трекер жизни нового поколения</title>
+  <title>Nodes — Новый взгляд на формирование привычек</title>
 </head>
 
 <body>
